--- a/style.css
+++ b/style.css
@@ -21,6 +21,8 @@
     --light-gray70: hsla(0, 0%, 84%, .7);
     --bittersweet-shimmer: hsl(0, 43%, 51%);
 
+    --transparent-gray: hsla(240, 1%, 17%, .75);
+
     --ff-poppins: 'Poppins', sans-serif;
 
     --fs1: 24px;
@@ -90,6 +92,52 @@ input, textarea {
 html { font-family: var(--ff-poppins); }
 
 body { background: var(--smoky-black); }
+
+body.light-mode {
+    --bg-gradient-onyx: linear-gradient(to bottom right, hsl(0, 0%, 90%) 3%, hsl(0, 0%, 95%) 97%);
+    --bg-gradient-jet: linear-gradient(to bottom right, hsla(0, 0%, 93%, .251) 3%, hsla(0, 0%, 97%, 0) 100%), hsl(0, 0%, 95%);
+    --border-gradient-onyx: linear-gradient(to bottom right, hsl(0, 0%, 84%) 0%, hsla(0, 0%, 85%, 0) 50%);
+    --jet: hsl(0, 0%, 90%);
+    --onyx: hsl(0, 0%, 95%);
+    --eerie-black1: hsl(0, 0%, 98%);
+    --eerie-black2: hsl(0, 0%, 97%);
+    --smoky-black: hsl(0, 0%, 100%);
+    --white1: hsl(0, 0%, 10%);
+    --white2: hsl(0, 0%, 15%);
+    --light-gray: hsl(0, 0%, 22%);
+    --light-gray70: hsla(0, 0%, 35%, .7);
+    --transparent-gray: hsla(0, 0%, 95%, .75);
+}
+
+/* Stile del bottone toggle */
+.theme-toggle-btn {
+    background: var(--border-gradient-onyx);
+    color: var(--orange-teal-crayola);
+    width: 30px;
+    height:30px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+    box-shadow: var(--shadow2);
+    z-index: 10;
+    transition: var(--transition1);
+    cursor: pointer;
+    position: absolute;
+    right: -10px;
+    bottom: -10px;
+}
+
+.theme-toggle-btn:hover {
+    background: var(--bg-gradient-teal1);
+    transform: scale(1.1);
+}
+
+.theme-icon {
+    transition: var(--transition1);
+}
+
 
 main {
     margin: 15px 12px;
@@ -361,7 +409,7 @@ article { display: none; }
     bottom: 0;
     left: 0;
     width: 100%;
-    background: hsla(240, 1%, 17%, .75);
+    background: var(--transparent-gray);
     backdrop-filter: blur(10px);
     border: 1px solid var(--jet);
     border-radius: 12px 12px 0 0;
@@ -406,7 +454,7 @@ article { display: none; }
         text-align: justify;
         padding-left: 10px;
         padding-right: 10px;
-     }
+    }
 
 .service { margin-bottom: 35px; }
 
