--- a/style.css
+++ b/style.css
@@ -96,6 +96,8 @@ body { background: var(--smoky-black); }
 body.light-mode {
     --bg-gradient-onyx: linear-gradient(to bottom right, hsl(0, 0%, 90%) 3%, hsl(0, 0%, 95%) 97%);
     --bg-gradient-jet: linear-gradient(to bottom right, hsla(0, 0%, 93%, .251) 3%, hsla(0, 0%, 97%, 0) 100%), hsl(0, 0%, 95%);
+    --bg-gradient-teal1: linear-gradient(to bottom right, hsl(174, 100%, 46%) 0%, hsla(173, 100%, 48%, 0) 50%);
+    --bg-gradient-teal2: linear-gradient(135deg, hsla(175, 100%, 46%, 0.251) 0%, hsla(35, 100%, 48%, 0) 59.86%), hsl(0, 0%, 95%);
     --border-gradient-onyx: linear-gradient(to bottom right, hsl(0, 0%, 84%) 0%, hsla(0, 0%, 85%, 0) 50%);
     --jet: hsl(0, 0%, 90%);
     --onyx: hsl(0, 0%, 95%);
@@ -107,6 +109,7 @@ body.light-mode {
     --light-gray: hsl(0, 0%, 22%);
     --light-gray70: hsla(0, 0%, 35%, .7);
     --transparent-gray: hsla(0, 0%, 95%, .75);
+
 }
 
 /* Stile del bottone toggle */
