--- a/style.css
+++ b/style.css
@@ -1,22 +1,23 @@
+/* Original design: https://codepen.io/leonam-silva-de-souza/pen/vYowKqP */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 :root {
     --bg-gradient-onyx: linear-gradient(to bottom right, hsl(240, 1%, 25%) 3%, hsl(0, 0%, 19%) 97%);
-    --bg-gradient-jet: linear-gradient(to bottom right, hsla(240, 1%, 18%, .251) 3%, hsla(240, 2%, 11%, 0) 100%), hsl(240, 2%, 13%);
+    --bg-gradient-jet: linear-gradient(to bottom right, hsla(240, 1%, 18%, .251) 3%, hsla(240, 2%, 11%, 0) 100%), hsl(0deg 0% 0.08% / 35%);
     --bg-gradient-teal1: linear-gradient(to bottom right, hsl(174, 100%, 71%) 0%, hsla(173, 100%, 69%, 0) 50%);
     --bg-gradient-teal2: linear-gradient(135deg, hsla(175, 100%, 71%, 0.251) 0%, hsla(35, 100%, 68%, 0) 59.86%), hsl(240, 2%, 13%);
     --border-gradient-onyx: linear-gradient(to bottom right, hsl(0, 0%, 25%) 0%, hsla(0, 0%, 25%, 0) 50%);
-    --text-gradient-teal: linear-gradient(to right, hsl(165, 100%, 72%), hsl(171, 100%, 68%));
+    --text-gradient-teal: linear-gradient(to right, hsl(165, 65%, 61%), hsl(171, 64%, 57%));
 
     --jet: hsl(0, 0%, 22%);
-    --onyx: hsl(240, 1%, 17%);
-    --eerie-black1: hsl(240, 2%, 13%);
-    --eerie-black2: hsl(240, 2%, 12%);
+    --onyx: hsla(240, 1%, 17%, 0.542);
+    --eerie-black1: hsla(240, 3%, 13%, 0.688);
+    --eerie-black2: hsla(240, 2%, 12%, 0.725);
     --smoky-black: hsl(0, 0%, 7%);
     --white1: hsl(0, 0%, 100%);
     --white2: hsl(0, 0%, 98%);
-    --orange-teal-crayola: hsl(172, 67%, 56%);
-    --vegas-gold: hsl(172, 64%, 50%);
+    --orange-teal-crayola: hsl(172, 55%, 50%);
+    --vegas-gold: hsl(172, 55%, 50%);
     --light-gray: hsl(0, 0%, 84%);
     --light-gray70: hsla(0, 0%, 84%, .7);
     --bittersweet-shimmer: hsl(0, 43%, 51%);
@@ -89,27 +90,37 @@ input, textarea {
 
 :focus { outline-color: var(--orange-teal-crayola); }
 
-html { font-family: var(--ff-poppins); }
+html { 
+    font-family: var(--ff-poppins); 
+    padding: 0; 
+    margin: 0; 
+    overscroll-behavior-y:none;
+}
 
-body { background: var(--smoky-black); }
+body {min-height: 105vh;
+    background-image: url('/Media/wallpaper-dark.png');
+    /* Fallback */ background-color: var(--smoky-black);
+    background-size: cover;
+    background-attachment: fixed;
+    overscroll-behavior-y: none;
+}
 
 body.light-mode {
     --bg-gradient-onyx: linear-gradient(to bottom right, hsl(0, 0%, 90%) 3%, hsl(0, 0%, 95%) 97%);
-    --bg-gradient-jet: linear-gradient(to bottom right, hsla(0, 0%, 93%, .251) 3%, hsla(0, 0%, 97%, 0) 100%), hsl(0, 0%, 95%);
+    --bg-gradient-jet: linear-gradient(to bottom right, hsla(0, 0%, 93%, .251) 3%, hsla(0, 0%, 97%, 0) 100%), hsl(0, 0%, 95%, .4);
     --bg-gradient-teal1: linear-gradient(to bottom right, hsl(174, 100%, 46%) 0%, hsla(173, 100%, 48%, 0) 50%);
     --bg-gradient-teal2: linear-gradient(135deg, hsla(175, 100%, 46%, 0.251) 0%, hsla(35, 100%, 48%, 0) 59.86%), hsl(0, 0%, 95%);
     --border-gradient-onyx: linear-gradient(to bottom right, hsl(0, 0%, 84%) 0%, hsla(0, 0%, 85%, 0) 50%);
     --jet: hsl(0, 0%, 90%);
     --onyx: hsl(0, 0%, 95%);
     --eerie-black1: hsl(0, 0%, 98%);
-    --eerie-black2: hsl(0, 0%, 97%);
+    --eerie-black2: hsla(0, 0%, 97%, 0.8);
     --smoky-black: hsl(0, 0%, 100%);
-    --white1: hsl(0, 0%, 10%);
-    --white2: hsl(0, 0%, 15%);
+    --white1: hsl(0, 0%, 15%);
+    --white2: hsl(0, 0%, 20%);
     --light-gray: hsl(0, 0%, 22%);
     --light-gray70: hsla(0, 0%, 35%, .7);
     --transparent-gray: hsla(0, 0%, 95%, .75);
-
 }
 
 /* Stile del bottone toggle */
@@ -151,7 +162,7 @@ main {
     background: var(--eerie-black2);
     border: 1px solid var(--jet);
     border-radius: 20px;
-    box-shadow: var(--shadow1);
+    box-shadow: var(--shadow2);
     z-index: 1;
     padding: 15px;
 }
@@ -251,7 +262,6 @@ article { display: none; }
 
 .content-card {
     position: relative;
-    background: var(--border-gradient-onyx);
     padding: 15px;
     padding-top: 45px;
     border-radius: 14px;
@@ -375,7 +385,7 @@ article { display: none; }
 }
 
     .contact-info :is(.contact-link, time, address) {
-        color: var(--white2);
+        color: var(--white1);
         font-size: var(--fs7);
     }
 
@@ -470,7 +480,6 @@ article { display: none; }
 
 .service-item {
     position: relative;
-    background: var(--border-gradient-onyx);
     padding: 20px;
     border-radius: 14px;
     box-shadow: var(--shadow2);
@@ -732,7 +741,8 @@ article { display: none; }
         width: 6px;
         border-radius: 50%;
         background: var(--text-gradient-teal);
-        box-shadow: 0 0 0 4px var(--jet);
+        box-shadow: 0 0 0 2px var(--jet);
+        filter: blur(0.2px)
     }
 
 .timeline-item-title {
@@ -1048,7 +1058,7 @@ article { display: none; }
 }
 
 .form-input {
-    color: var(--white2);
+    color: var(--white1);
     font-size: var(--fs6);
     font-weight: var(--fw400);
     padding: 13px 20px;
@@ -1123,7 +1133,7 @@ textarea.form-input {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
     gap: 1.2rem 2rem;
-    color: var(--white2);
+    color: var(--white1);
 }
 
 .skills-item {
@@ -1143,7 +1153,8 @@ textarea.form-input {
     height: 8px;
     border-radius: 50%;
     background: var(--orange-teal-crayola);
-    box-shadow: 0 0 0 4px var(--jet);
+    box-shadow: 0 0 0 2px var(--jet);
+    filter: blur(0.2px)
 }
 
 .subskills {
@@ -1547,7 +1558,7 @@ textarea.form-input {
     .sidebar {
         position: sticky;
         top: 60px;
-        max-height: max-content;
+        max-height: 750px;
         height: 100%;
         margin-bottom: 0;
         padding-top: 60px;
