--- a/style.css
+++ b/style.css
@@ -1437,7 +1437,7 @@ textarea.form-input {
         display: flex;
         justify-content: flex-start;
         align-items: center;
-        gap: 25px;
+        gap: 1rem;
         padding-left: 5px;
         margin-bottom: 30px;
     }
